--- a/src/client/scss/pages/_index.scss
+++ b/src/client/scss/pages/_index.scss
@@ -3,7 +3,7 @@
 }
 
 .box-wrapper {
-    padding-top: 100px;
+    margin-top: 16px;
     .modal-close-button {
         display: none;
     }
